# notifications_sprint_1

./: .env  .env.example  README.md  docker-compose.yml  requirements.txt  setup.cfg  websocket_test_client.py
event_api/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
event_api/src/: main.py
event_api/src/broker/: abstract.py  abstract_broker.py  rabbit_broker.py  rabbit_storage.py
event_api/src/core/: config.py  logger.py
event_api/src/db/: abstract.py  abstract_repository.py  mongo_rep.py  mongo_storage.py
event_api/src/models/: base.py  notifications.py  response.py  response_model.py  templates.py  user.py
event_api/src/service/: notifications.py  websocket_service.py
event_api/src/services/: notifications.py
event_api/src/utils/: check_auth.py
event_api/src/ws/: channels.py
event_api/utils/: wait_for_mongo.py
scheduler/: Dockerfile  pyproject.toml
scheduler/src/: main.py
scheduler/src/broker/: abstract_broker.py
scheduler/src/connection/: mongo_conn.py  rabbit_conn.py
scheduler/src/core/: config.py  logger.py
scheduler/src/db/: abstract_repository.py  mongo.py
scheduler/src/models/: scheduled_notification.py
scheduler/src/services/: scheduler.py  scheduler_job.py
scheduler/src/utils/: fake_user.py
worker/: pyproject.toml
worker/src/: main.py
worker/src/broker/: rabbitmq.py
worker/src/connection/: conn.py  mongo_conn.py
worker/src/core/: config.py  logger.py
worker/src/db/: abstract_repository.py  mongo.py
worker/src/models/: broker_message.py  message.py  notification.py  templates.py  worker_cron.py
(+16 files in other folders)
