[tool.poetry]
name = "event_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiormq = "^6.8.0"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
pydantic-settings = "^2.2.1"
pymongo = "^4.7.0"
motor = "^3.4.0"
gunicorn = "^22.0.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
