[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "^3.10.4"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
motor = "^3.4.0"
aiormq = "^6.8.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
